@@ -22,6 +22,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.ByteBuffer;
 
+import org.apache.avro.AvroRuntimeException;
 import org.apache.avro.util.Utf8;
 
 /** An {@link Decoder} for binary-format data.
@@ -331,6 +332,9 @@ public class BinaryDecoder extends Decoder {
    */
   protected void doReadBytes(byte[] bytes, int start, int length)
       throws IOException {
+    if (length < 0)
+      throw new AvroRuntimeException("Malformed data. Length is negative: "
+                                     + length);
     int remaining = limit - pos;
     if (length <= remaining) {
       System.arraycopy(buf, pos, bytes, start, length);
